# qt-elements

./: .gitignore  AGENTS.md  COMPONENTS.md  README.md  README_CN.md
coding/: CMakeLists.txt  todolist
coding/practice/: CMakeLists.txt
coding/practice/src/: main.cpp  mywidget.cpp  mywidget.h
coding/uicontrols/: CMakeLists.txt
coding/uicontrols/docs/: Alert.md  Badge.md  Button.md  Checkbox.md  CheckboxGroup.md  Divider.md  Input.md  Link.md  Progress.md  Radio.md  Slider.md  Switch.md  Tag.md  Text.md  Tooltip.md
coding/uicontrols/examples/alert/: basic.cpp  center.cpp  closable.cpp  description.cpp  show_icon.cpp  theme.cpp
coding/uicontrols/examples/badge/: basic.cpp  dot.cpp  max.cpp
coding/uicontrols/examples/button/: basic.cpp  button_group.cpp  circle.cpp  color.cpp  dashed.cpp  disabled.cpp  icon.cpp  link.cpp  loading.cpp  plain.cpp  round.cpp  size.cpp  text.cpp
coding/uicontrols/examples/checkbox/: basic.cpp  border.cpp  button_style.cpp  disabled.cpp  group.cpp  indeterminate.cpp
coding/uicontrols/examples/divider/: basic.cpp  dashed_dotted.cpp  vertical.cpp  with_text.cpp
coding/uicontrols/examples/input/: autosize.cpp  basic.cpp  clearable.cpp  disabled.cpp  password.cpp  prepend_append.cpp  size.cpp  textarea.cpp  with_icon.cpp  word_limit.cpp
coding/uicontrols/examples/link/: basic.cpp  disabled.cpp  types.cpp  underline.cpp
coding/uicontrols/examples/progress/: circle.cpp  dashboard.cpp  indeterminate.cpp  line.cpp  status.cpp  text_inside.cpp
coding/uicontrols/examples/radio/: basic.cpp  border.cpp  disabled.cpp  vertical.cpp
coding/uicontrols/examples/slider/: basic.cpp  disabled.cpp  range.cpp  stops.cpp  vertical.cpp
coding/uicontrols/examples/switch/: basic.cpp  disabled.cpp  loading.cpp  sizes.cpp  with_label.cpp
coding/uicontrols/examples/tag/: basic.cpp  closable.cpp  round.cpp  sizes.cpp  theme_dark.cpp  theme_light.cpp  theme_plain.cpp
coding/uicontrols/examples/text/: all_types.cpp  sizes.cpp  truncated.cpp  types.cpp
coding/uicontrols/examples/tooltip/: delay.cpp  hover.cpp  manual.cpp  placement.cpp  static.cpp
coding/uicontrols/src/: main.cpp  testwidget.cpp  testwidget.h
coding/uicontrols/src/alert/: zalert.cpp  zalert.h
coding/uicontrols/src/animation/: animation_manager.cpp  animation_manager.h
coding/uicontrols/src/badge/: zbadge.cpp  zbadge.h
coding/uicontrols/src/button/: zbutton.cpp  zbutton.h
coding/uicontrols/src/checkbox/: zcheckbox.cpp  zcheckbox.h
coding/uicontrols/src/divider/: zdivider.cpp  zdivider.h
coding/uicontrols/src/icon/: icon_manager.cpp  icon_manager.h
coding/uicontrols/src/input/: zinput.cpp  zinput.h
coding/uicontrols/src/link/: zlink.cpp  zlink.h
coding/uicontrols/src/painter/: painter.cpp  painter.h
coding/uicontrols/src/popup/: zpopup.cpp  zpopup.h
coding/uicontrols/src/progress/: zprogress.cpp  zprogress.h
coding/uicontrols/src/radio/: zradio.cpp  zradio.h
coding/uicontrols/src/slider/: zslider.cpp  zslider.h
coding/uicontrols/src/statemachine/: statemachine.cpp  statemachine.h
coding/uicontrols/src/style/: style.h
coding/uicontrols/src/switch/: zswitch.cpp  zswitch.h
coding/uicontrols/src/tag/: ztag.cpp  ztag.h
coding/uicontrols/src/text/: ztext.cpp  ztext.h
coding/uicontrols/src/theme/: icon.h  theme.h
coding/uicontrols/src/tooltip/: ztooltip.cpp  ztooltip.h
coding/uicontrols/src/widgets/alert/: zalert.cpp  zalert.h
coding/uicontrols/src/widgets/badge/: zbadge.cpp  zbadge.h
coding/uicontrols/src/widgets/button/: zbutton.cpp  zbutton.h
coding/uicontrols/src/widgets/checkbox/: zcheckbox.cpp  zcheckbox.h
coding/uicontrols/src/widgets/checkboxgroup/: zcheckboxgroup.cpp  zcheckboxgroup.h
coding/uicontrols/src/widgets/divider/: zdivider.cpp  zdivider.h
coding/uicontrols/src/widgets/input/: zinput.cpp  zinput.h
coding/uicontrols/src/widgets/link/: zlink.cpp  zlink.h
coding/uicontrols/src/widgets/progress/: zprogress.cpp  zprogress.h
coding/uicontrols/src/widgets/radio/: zradio.cpp  zradio.h
coding/uicontrols/src/widgets/slider/: zslider.cpp  zslider.h
coding/uicontrols/src/widgets/switch/: zswitch.cpp  zswitch.h
coding/uicontrols/src/widgets/tag/: ztag.cpp  ztag.h
coding/uicontrols/src/widgets/text/: ztext.cpp  ztext.h
coding/uicontrols/src/widgets/tooltip/: ztooltip.cpp  ztooltip.h
scripts/: fix-encoding.ps1
