cmake_minimum_required(VERSION 4.0)
set(VCPKG_ROOT "D:/code/github/vcpkg" CACHE STRING "Path to vcpkg root directory")
message(STATUS "Using vcpkg root: ${VCPKG_ROOT}")

if(${CMAKE_GENERATOR_PLATFORM} STREQUAL "Win32")
    message(STATUS "Building for x86 (32-bit)")
    set(VCPKG_TARGET_TRIPLET "x86-windows")
else()
    message(STATUS "Building for x64 (64-bit)")
    set(VCPKG_TARGET_TRIPLET "x64-windows")
endif()

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()
message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
message(STATUS "Using VCPKG_TARGET_TRIPLET: ${VCPKG_TARGET_TRIPLET}")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
project(qtproject)

list(APPEND CMAKE_TOOL_CHAIN_FILE ${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
message(STATUS "Using toolchain file: ${CMAKE_TOOL_CHAIN_FILE}")
set(Qt5_DIR ${VCPKG_ROOT}/installed/${VCPKG_TARGET_TRIPLET}/share/cmake/Qt5)
message(STATUS "Using Qt5_DIR: ${Qt5_DIR}")
set(Qt5_Include_DIR ${VCPKG_ROOT}/installed/${VCPKG_TARGET_TRIPLET}/include/qt5)
message(STATUS "Using Qt5_Include_DIR: ${Qt5_Include_DIR}")
set(Qt5_Version "5.15.18")
message(STATUS "Using Qt5_Version: ${Qt5_Version}")

add_subdirectory(practice)
add_subdirectory(uicontrols)
